# stacks

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  pyproject.toml
.github/workflows/: lint.yml
caddy/: .env.example  .gitignore  Dockerfile  compose.yaml  docker-compose.yml
caddy/docker/rootfs/: docker-healthcheck.sh
cappuccino/: .env.example  compose.yaml  docker-compose.yml
dashboard/: .env.example  compose.yaml  docker-compose.yml
docker-monitoring/: .env.example  compose.yaml  docker-compose.yml
foxbnc/: .env.example  compose.yaml  docker-compose.yml
frigate/: .env.example  compose.yaml
gentoogram-bot/: .env.example  compose.yaml  docker-compose.yml
gitea/: .env.example  compose.yaml  docker-compose.yml
mediaserver/: .env.example  README.md  compose.yaml  docker-compose.yml
minecraft/: .env.example  compose.yaml  docker-compose.yml
monitoring/: .env.example  docker-compose.yml
netbox/: .env.example  .gitignore  compose.yaml  docker-compose.yml
ntfy/: .env.example  compose.yaml
portainer/: .env.example  compose.yaml  docker-compose.yml
pste/: .env.example  compose.yaml  docker-compose.yml
rehome/: .env.example  compose.yaml  docker-compose.yml
uptimekuma/: .env.example  compose.yaml  docker-compose.yml
vaultwarden/: .env.example  compose.yaml  docker-compose.yml
zigbee2mqtt/: .env.example  compose.yaml
