[project]
name = "stacks"
version = "0.1.0"
description = "Some docker-compose stacks 🤷"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pre-commit>=4.2.0", "pre-commit-hooks>=5.0.0", "yamlfix>=1.17.0"]

[tool.yamlfix]
line_length = 120
whitelines = 1
section_whitelines = 1
quote_basic_values = true
quote_representation = '"'
sequence_style = "block_style"
